--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -1,3 +1,15 @@
 @import url(_variaveis.css);
+@import url(../componentes/chamada.css);
+@import url(../componentes/logo.css);
 
+body {
+  background-image: url(../../img/Forma\ 1.svg);
+  background-repeat: no-repeat;
+}
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
