--- a/assets/css/componentes/botao.css
+++ b/assets/css/componentes/botao.css
@@ -9,3 +9,15 @@
   width: 180px;
   box-shadow: 2px 2px 4px #00000025;
 }
+
+.botao__cadastro {
+  margin-top: 1.5rem;
+  margin-bottom: 6.5rem;
+  width: 148px;
+}
+
+.botao__login {
+  margin-top: 1.5rem;
+  margin-bottom: 16rem;
+  width: 148px;
+}
