--- a/assets/css/componentes/cabecalho.css
+++ b/assets/css/componentes/cabecalho.css
@@ -1,6 +1,15 @@
+
 .cabecalho {
   display: grid;
   grid-template-columns: 50% 50%;
+}
+
+.cabecalho__patas {
+  background-image: url(../../img/Patas.svg);
+  background-repeat: no-repeat;
+  background-position: right top;
+  padding-bottom: 5rem;
+  margin-bottom: -5rem;
 }
 
 .cabecalho__icones {
