--- a/assets/css/componentes/rodape.css
+++ b/assets/css/componentes/rodape.css
@@ -2,7 +2,7 @@
   background-color: var(--verde);
   color: var(--branco);
   font: var(--paragrafo);
-  position: absolute;
+  position: relative;
   
   height: 104px;
   width: 100%;
@@ -11,4 +11,5 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
+  bottom: 0;
 }
