--- a/assets/css/style-index.css
+++ b/assets/css/style-index.css
@@ -1,9 +1,9 @@
-main {
+/* main {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-}
+} */
 
 .logo__container {
   position: relative;
@@ -20,7 +20,7 @@ main {
 }
 
 .fundo__inicial {
-  background: var(--azul-padrao);
+  background-color: var(--azul-padrao);
   height: 100%;
 }
 
@@ -59,6 +59,8 @@ main {
 }
 
 .ilustracao__1 {
+  position: absolute;
   margin-bottom: -1rem;
   margin-right: 20%;
+  z-index: 2;
 }
