Add and update files via upload

--- a/assets/css/base/_variaveis.css
+++ b/assets/css/base/_variaveis.css
@@ -16,5 +16,9 @@
 
   --input-cadastro: 400 12px/16px 'Poppins', serif;
 
+  --input-cadastro: 400 14px/24px 'Poppins', serif;
+
   --label-cadastro: 400 16px/24px 'Poppins', serif;
+
+  --label-cadastro: 600 16px/24px 'Poppins', serif;
 }
