Add and upgrade files via upload

--- a/assets/css/base/_variaveis.css
+++ b/assets/css/base/_variaveis.css
@@ -18,7 +18,7 @@
 
   --input-cadastro: 400 14px/24px 'Poppins', serif;
 
-  --label-cadastro: 400 16px/24px 'Poppins', serif;
+  --label-cadastro-minus: 400 16px/24px 'Poppins', serif;
 
   --label-cadastro: 600 16px/24px 'Poppins', serif;
 }
