--- a/assets/css/style-home.css
+++ b/assets/css/style-home.css
@@ -5,18 +5,12 @@
   align-items: center;
   text-align: center;
   margin-top: 3rem;
-  margin-bottom: 1rem;
-  padding-right: 4.25rem;
-  padding-left: 4.25rem;
 }
 
 .container__disponiveis {
   width: 100%;
   display: flex;
   justify-content: center;
-}
-
-.lista__disponiveis {
 }
 
 .cartao__pet {
@@ -27,6 +21,7 @@
   height: 196px;
   width: 360px;
 }
+
 
 .cartao__pet__foto {
   margin-top: 1.5rem;
@@ -67,4 +62,111 @@
 
 .chamada__texto {
   margin-bottom: 0rem;
+}
+
+@media (min-width:768px) {
+  .chamada__container {
+    width: 100%;
+    margin-top: 11.75rem;
+    margin-left: 12.315rem;
+    margin-right: 12.315rem;
+  }
+
+  .container__disponiveis {
+    width: 100%;
+    text-align: center;
+  }
+
+  .lista__disponiveis {
+    justify-content: flex-start;
+    display: flex;
+    flex-wrap: wrap;
+    width: 768px;
+  }
+
+  .cartao__pet {
+    width: 21.5rem;
+  }
+
+  .cartao__pet:nth-of-type(-n+2) {
+    margin-top: 2rem;
+  }
+
+  .cartao__pet:nth-of-type(odd) {
+    margin-left: 2rem;
+  }
+
+  .cartao__pet:nth-of-type(even) {
+    margin-left: 1rem;
+  } 
+
+  .cartao__pet:last-of-type {
+    margin-bottom: 2rem;
+  }
+
+  .cartao__descricao {
+    margin-right: 0;
+    text-align: left;
+  }
+}
+
+@media (min-width:1440px) {
+  main {
+    background-image: url(../../assets/img/Forma\ 2_right_768px.svg);
+    background-position: right bottom 12.25rem;
+    background-repeat: no-repeat;
+  }
+
+  .chamada__container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 6.375rem;
+    justify-content: center;
+  }
+
+  .container__disponiveis {
+    width: 1440px;
+    text-align: center;
+  }
+
+  .lista__disponiveis {
+    justify-content:space-between;
+    display: flex;
+    flex-wrap: wrap;
+    width: 1440px;
+    margin-left: 10rem;
+    margin-right: 10rem;
+    margin-bottom: 3.75rem;
+  }
+
+  .cartao__pet {
+    width: 22.625rem;
+    margin-right: 0;
+  }
+  
+  .cartao__pet:nth-of-type(odd) {
+    margin-left: 0;
+  }
+
+  .cartao__pet:nth-of-type(even) {
+    margin-left: 0;
+  } 
+
+  .cartao__pet:nth-of-type(-n+3) {
+    margin-top: 2.5rem;
+  }
+
+  .cartao__pet:nth-of-type(3n+1) {
+    margin-left: 0;
+  }
+
+  .cartao__pet:last-of-type {
+    margin-bottom: 0;
+  }
+
+  .cartao__descricao {
+    margin-right: 0;
+    text-align: left;
+  }
 }
