--- a/assets/css/style-cadastro.css
+++ b/assets/css/style-cadastro.css
@@ -15,7 +15,6 @@ main {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  margin-top: 2.5rem;
   padding-right: 1.5rem;
   padding-left: 1.5rem;
 }
@@ -24,4 +23,32 @@ main {
   color: #737380;
   font: var(--label-cadastro);
   margin-top: 1.25rem;
+}
+
+@media (min-width: 768px) {
+
+  main {
+    background-image: url(../../assets/img/Forma\ 2_right_768px.svg);
+    background-position: right bottom 9rem;
+  }
+
+  .chamada__container {
+  padding-right: 7.625rem;
+  padding-left: 7.625rem;
+  margin-bottom: 1rem;
+  }
+}
+
+
+@media (min-width: 1440px) {
+
+  main {
+    background-image: url(../../assets/img/Forma\ 2_right_768px.svg);
+    background-position: right bottom 6rem;
+  }
+
+  .chamada__container {
+  width: 34.5rem;
+  margin-bottom: 1.75rem;
+  }
 }
