Adição e update de arquivos.

--- a/assets/css/base/_variaveis.css
+++ b/assets/css/base/_variaveis.css
@@ -10,6 +10,8 @@
   /* TIPOGRAFIA */
   --chamada-titulo: 500 26px/48px 'IBM Plex Sans', serif;
 
+  --chamada-titulo-2: 500 28px/48px 'Poppins', serif;
+
   --paragrafo: 400 16px/24px 'Poppins', serif;
 
   --botao: 600 16px/24px 'Poppins',serif;
